tests/sideEffectingExpressions/invalid/semantic/TypeErr1.wacc
# invalid types

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int b = 0 ;
  b /= true
end
